Fix spacing issues in education and experience

--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -5,8 +5,16 @@
   }
   
   .edu-content .edu-info {
-    margin: -50px 0 20px 80px;
+    margin: -30px 0 20px 80px;
     width: 90%;
+
+  }
+
+  .edu-content img {
+    position: relative;
+    top: 40px;
+    width: 49px;
+    height: 49px;
   }
   
   .edu-content .edu-name {
